{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Movement",
            "id": "03cc83b8-dfee-421c-a539-09cab6462ded",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "f856ffe6-926f-47fd-8f19-2a972bedaa71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "901b736d-cfb5-4d0a-872d-b1c8dfb618c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "cfb736e8-1828-4188-9145-bce585f62f60",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9f6c7278-3409-48a7-9e7e-01fb5ecce3ac",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f994592-0d2f-4072-85a2-c39af722fc62",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2a7a438-8e5c-4a14-ba1b-125c58dd7d3a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GravitySwitch",
            "id": "729da495-7dda-4516-8dc7-232c988f6499",
            "actions": [
                {
                    "name": "SwitchUp",
                    "type": "Button",
                    "id": "c5dd0cb8-9d2b-4e86-86f6-d03495cda282",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchDown",
                    "type": "Button",
                    "id": "c93f2c14-d822-48e5-ad8e-9c21d3dc16ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchLeft",
                    "type": "Button",
                    "id": "9f968654-06b5-44e0-917b-ea664ad186fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchRight",
                    "type": "Button",
                    "id": "827ddb84-5b83-4197-857e-ffd7e9a8bfeb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2e320251-f0cc-421c-bbde-15b933955573",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80ee9343-8e41-4785-8032-d15b87ec67ff",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f4d5da1-9083-42ec-aed2-2c5a4ca48d66",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f23874cf-c1f6-4701-839e-31f66592f4fb",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}